organizing the files

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sorting visulizer</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="styles/styles.css" />
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js"
 			integrity="sha512-NxocnqsXP3zm0Xb42zqVMvjQIktKEpTIbCXXyhBPxqGZHqhcOXHs4pXI/GoZ8lE+2NJONRifuBpi9DxC58L0Lw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
-		<script src="mergesort.js"></script>
-		<script src="bubblesort.js"></script>
-		<script src="selectionsort.js"></script>
-		<script defer src="sketch.js"></script>
+		<script src="js/mergesort.js"></script>
+		<script src="js/bubblesort.js"></script>
+		<script src="js/selectionsort.js"></script>
+		<script defer src="js/sketch.js"></script>
 	</head>
 	<body>
 		<div class="comparison">Comparisons: <div class="comVal"></div></div>
