--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="js/mergesort.js"></script>
-    <script src="js/bubblesort.js"></script>
-    <script src="js/selectionsort.js"></script>
+    <script defer src="js/mergesort.js"></script>
+    <script defer src="js/bubblesort.js"></script>
+    <script defer src="js/selectionsort.js"></script>
     <script defer src="js/sketch.js"></script>
   </head>
 
@@ -66,14 +66,14 @@
         </div>
 
         <div class="timeComplex">
-          <h1>Time Complexity</h1>
+          <div class="timeHeading">Time Complexity</div>
           <div class="bigoData">
             <div class="comparison">
               Comparisons:
               <div class="comVal"></div>
             </div>
             <div class="comparison">
-              Array Size:
+              N :
               <div class="arraySize"></div>
             </div>
           </div>
